--- a/react-counter/src/App.css
+++ b/react-counter/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+.App{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.count-wrapper{
+  background-color: hotpink;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  padding: 100px;
 }
 
-.App-link {
-  color: #61dafb;
+.count-number{
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  font-size: 7rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.count-controls{
+  display: flex;
+  gap: 20px;
+}
+
+.btn{
+  border: 1px solid #fff;
+  border-radius: 10px;
+  padding: 15px 25px;
+  transition: all 0.5s;
+}
+
+.btn:hover{
+  cursor: pointer;
+  background-color: hotpink;
+  color: #fff;
 }
