--- a/react-counter/src/index.css
+++ b/react-counter/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #252525;
   margin: 0;
   font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
